# envoy

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  Envoy.podspec  GreatfireEnvoy.podspec  Package.swift  README.md  Vagrantfile  cspell.json  series
android/: .gitignore  README.md  build-envoy.sh  build.gradle  envoy3.patch  getstarted.md  gradle.properties  libraries.md  settings.gradle
android/cronet/: build.gradle
android/demo/: build.gradle
android/demo/src/main/cpp/: CMakeLists.txt  secrets.cpp
android/envoy/: build.gradle  proguard-rules.pro
android/gradle/wrapper/: gradle-wrapper.properties
apple/: CHANGELOG.md  Envoy.podspec  Package.swift  README.md
apple/Envoy/Classes/: Envoy.swift  EnvoySchemeHandler.swift  EnvoySocksForwarder.swift  EnvoyUrlProtocol.swift  EnvoyUrlProtocolDoNotUse.swift  EnvoyWebView.swift  Network+Helpers.swift  (+2 more)
apple/Example/: Podfile
apps/: DuckDuckGo-Android.patch  WordPress-Android.patch  WordPress-FluxC-Android.patch  apps-android-wikipedia.patch  build-apps.sh  nginx.conf  wikipedia.md
docs/: android-networking-with-cronet.txt  android-networking.txt
go/: README.md  build.sh  emissary.go  envoyproxy.go  go.mod  go.sum  https.go  masque_proxy.go
native/: 0001-Add-envoy_url-and-jni.patch  0001-Add-envoy_url-to-URLRequestContext.patch  0001-Envoy.patch  0002-Add-envoy-scheme.patch  0002-geneva-dns-and-api-txt.patch  0003-Add-jni-and-android-interface.patch  0003-Add-socks5-proxy-and-jni.patch  0003.1-geneva-dns-and-api-txt.patch  0004-Add-host-map-rules-for-envoy-scheme.patch  0004-envoy-url-socks5-param.patch  0005-Add-disabled-cipher-suites-parameter.patch  0006-Add-as-features-and-android-preferences.patch  0006-Enable-DNS-ECH.patch  0007-Add-cmdline-switch.patch  0008-Set-host-header-for-http2.patch  0009-Add-setting-page-for-envoy-url.patch  0010-Disable-external-intent.patch  0011-Add-salt-parameter.patch  0012-Add-socks5-proxy-for-cronet.patch  0013-Add-jni-for-cronet-socks5-proxy.patch  0014-Add-ss-service.patch  01-proxy_support.patch  02-dns_resolver_rules.patch  02.5-update_api_01_02.patch  03-tls_options.patch  03-update_api.patch  04-dns_over_https_config.patch  04-update_api.patch  05-update_api.patch  99-fixes.patch  ECH_DOH_108.patch  ECH_DOH_123.patch  Envoy_and_Geneva.patch  README.md  README_BUILD.md  build_cronet.sh  checkout-to-tag.sh  package_aar.sh  patch_cronet.sh  scm_ECH_log.patch  (+2 more)
native/node_drill/: BUILD.gn  Makefile  README.md  cacert.pem  chrome-83-or-85.patch  common.cc  common.h  first-import.patch  friend-url-fetcher.patch  xbackend.cc  xbackend.data  xbackend.h  xnode.cc  xnode.h  xpatch.cc  xpatch.h  xpatchcli.cc
server/: README.md  borrowed_code.go  concealed_auth.go  config.go  envoy.go  example.yaml  go.mod  go.sum  main.go  masque_server.go
(+126 files in other folders)
